--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tomas-votruba/gpwebpay",
+  "name": "jellyDevs/gpwebpay",
   "license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
   "type": "library",
   "description": "GP WepPay integration for Nette Framework",
